--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -226,6 +226,8 @@ Thus the algorithm would move the queen at row 7 from column 3 to 2 and thereby 
 
 
 \section{Result table of K-queens, and a description of an easy-case}
+One of the solutions found for the easy-case (k=8)
+
 \begin{verbatim}
 QueenManager k=8
 The board 
@@ -308,10 +310,10 @@ This would give us a conflict array which looked like this:\\
 \end{verbatim}
 \end{center}
 Which means that all node 2 and 3 have each 1 conflict each with eachother, because both of them have a neighbour with the same color as itself. We calculate the temperature (F) by calculating the number of crashes in total and using this formula: $F = 1- \frac{crashes}{number of Nodes}$ \\
-For the minconflict algorithm we take one randomly chosen node given that the chosen node was either not chosen last iteration or a color change was applied to this node the last iteration. This randomly chosen node then calculates how many conflicts it will have for the four colors and stores this in an array of this node's conflicts. We then try to find the lowest conflict for this node, and this happens to be the same color as the one it started with then we either change to a randomly chosen color that doesn increase the number of conflicts or tell the next iteration to ignore this node if it happens to be the original color that yields the lowest conflict for this node. This will ensure enough "jiggling" to make sure the coloring doesn't gets tangled. 
+For the minconflict algorithm we take one randomly chosen node given that the chosen node was either not chosen last iteration or a color change was applied to this node the last iteration. This randomly chosen node then calculates how many conflicts it will have for the four colors and stores this in an array of this node's conflicts. We then try to find the lowest conflict for this node, and this happens to be the same color as the one it started with then we either change to a randomly chosen color that doesn't increase the number of conflicts or tell the next iteration to ignore this node if it happens to be the original color that yields the lowest conflict for this node. This will ensure enough "jiggling" to make sure the coloring doesn't get tangled. 
 
 \section{Result table of Graph-Coloring, and the description of an easy-case}
-One of the runs and its results printed out, the N indicates which node we are looking at and the C tells us which color this node is. We have used numbers to represent the colors because this is easier to work with.\\
+One of the runs and its solution printed out, the N indicates which node we are looking at and the C tells us which color this node is. We have used numbers to represent the colors because this is easier to work with.\\
 \begin{verbatim}
 GraphManager: graph-color-1.txt
 
