--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -47,7 +47,7 @@
  
 %%% The "real" document content comes below...
  
-\title{AI prog 1}
+\title{AI prog 2}
 \author{Eivind Hærum \& \ Hong-Dang Lam}
 \date{\today} % Activate to display a given date or no date (if empty),
          % otherwise the current date is printed 
@@ -69,7 +69,11 @@ Please refer to the delivered code.
 We have included a textfile for each problem with some strings of inputs to easily test the program for various configurations.
 
 \section{Diagram}
+\begin{figure}[H] \includegraphics[width=20cm]{2_Diagram}
 
+\caption{Diagram}
+\label{diagram}
+\end{figure}
 \section{Third Puzzle}
 Our third puzzle is Sudoku, we have however modified the rules a bit because it makes it easier to implement and we feel that this modification fits the scheme of a scaling constraint satisfaction problem better.\\
 The difference between this and the normal Sudoku is the fact that the normal sudoku is usually a board of 3x3 numbered grids (with numbers ranging from and including 1 to and including 9), and the board is pre-filled with some numbers already, these numbers are not allowed to be changed whatsoever.\\
