--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -66,7 +66,7 @@
  
 \section{Working GPS}
 Please refer to the delivered code.
-We have included a textfile for each problem with some strings of inputs to easily test the program for various configurations. We are somewhat uncertain what you wanted in the "Demonstration" sections. So we have described how we solved the problems internally and if you use the provided inputs it should be quite easy to verify that our code solves the different puzzles on all Minimum Conflict difficulties, as well as the easy case for SA (and a few runs where the medium case also is solved by SA).
+We have included a textfile for each problem with some strings of inputs to easily test the program for various configurations. We are somewhat uncertain what you wanted in the "Demonstration" sections. So we have described how we solved the problems internally and if you use the provided inputs it should be quite easy to verify that our code solves the different puzzles on all difficulties with Minimum Conflict, as well as the easy case for SA (and a few runs where the medium case also is solved by SA).
 
 \section{Diagram}
 \begin{figure}[H] \includegraphics[width=20cm]{2_Diagram}
