--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -216,7 +216,7 @@ Because we have opted to use a one dimensional matrix internally, the creation a
 \end{verbatim}
 
 \noindent
-For SA create children where we chose one random row and move the queen on that row to a random column. The idea here is to alter the states slightly in the hope of getting closer to a goal state. The way SA determines the value of a particullar state is by counting the crashes in total and giving a value based on this. 
+For SA we create children where we choose one random row and move the queen on that row to a random column. The idea here is to alter the states slightly in the hope of getting closer to a goal state. The way SA determines the value of a particullar state is by counting the crashes in total and giving a value based on this. 
 \\
 However if we run Minimum-Conflict, and on this iteration randomly choose to alter the position for the queen at row 7 we would have to check each position for the queen on that given row. For this purpose we have yet another one dimensional matrix which counts up how many conflicts the move would produce if we opted to move to a particullar column. For this row we would have the NumberOfColumnConflict matrix appearing like this:
 
@@ -226,7 +226,7 @@ However if we run Minimum-Conflict, and on this iteration randomly choose to alt
 
 \end{verbatim}
 \noindent
-Thus the algorithm would move the queen at row 7 from column 3 to 2 and thereby reaching a goal state. 
+Thus the algorithm would move the queen at row 7 from column 3 to 2 and thereby reaching a goal state.
 
 
 \section{Result table of K-queens, and a description of an easy-case}
