--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -319,7 +319,7 @@ This would give us a conflict array which looked like this:
 \end{verbatim}
 \end{center}
 Which means that all node 2 and 3 have each 1 conflict each with eachother, because both of them have a neighbour with the same color as itself. We calculate the temperature (F) by calculating the number of crashes in total and using this formula: $F = 1- \frac{crashes}{number of Nodes}$ \\
-For the minconflict algorithm we take one randomly chosen node given that the chosen node was either not chosen last iteration or a color change was applied to this node the last iteration. This randomly chosen node then calculates how many conflicts it will have for the four colors and stores this in an array of this node's conflicts. For the example above, the algorithm would choose either node 1 or node 2, let's say it chose node 1 it will create a conflictForEachColor array which looked like
+For the minconflict algorithm we take one randomly chosen node given that the chosen node has a conflict, if it doesn't have any conflict the algorithm will ignore it. This randomly chosen node then calculates how many conflicts it will have for the four colors and stores this in an array of this node's conflicts. For the example above, the algorithm would choose either node 1 or node 2, let's say it chose node 1 it will create a conflictForEachColor array which looked like
 \begin{verbatim}
 [1,1,0,0]
 \end{verbatim} 
