--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -78,7 +78,7 @@ The figure shows our implementation, the first class CBLocalSearch takes care of
 call to either GeneralSA or GeneralMinConflict which inherits from LocalSearch. Both these classes take in the manager of each puzzle, and the manager takes care of creating the initial states (nodes in SA and finding the next neighbor in min conflict), this is done by calling the createInitState() method in each manager, it also sets the initial state as its currentState.
 The CBLocal search initializes a new search by calling .solve() on either the minConflict or the SA class. From here there's two routes depending on which algorithm we have decided to use, let us take look into the SA algorithm first. The generalSA class calls the createChildren() method in the manager which creates 20 children and returns them, then a call to the manager is invoked with the findBestChild() method, which returns the state with the highest \textbf{F}-value. \\
 The minConflict on the other hand calls on the findBestNeighbor() method which is supposed to find a random location and minimise the conflict given the constraints. It then runs updateConflict() in the findBestNeighbor() method, this updateConflict method updates the number of conflict and the conflict array so the next iteration has a correct indication where it can go to work. It also requires the getGoalState() method to know when to terminate the search.\\
-The code we've written tries to make the implementation as general as possible, the only thing needed to add a new puzzle is to add a manager and a new state type for the puzzle, the new state inherits the \textbf{F}-value and crashes from State, and needs to hold stuff specific to that problem as well as a few fields that might be used for printing out the final goal state (if found). The new manager class is required to have a constructor which calls the createInitState() which creates the initial state. For SA it needs a createChildren() method which returns an arrayList of states for the given puzzle, a calculateF(State) which calculates the objective function for the given State, and an implementation of updateConflicts(). For MinConflict it needs to implement findBestNeighbor() which minimizes conflicts as well as the getGoalState() method so that minConflict knows when to terminate the search.
+The code we've written tries to make the implementation as general as possible, the only thing needed to add a new puzzle is to add a manager and a new state type for the puzzle, the new state inherits the \textbf{F}-value and crashes from State, and needs to hold stuff specific to that problem as well as a few fields that might be used for printing out the final goal state (if found). The new manager class is required (by inheriting from StateManager) to have a constructor which calls the createInitState() which creates the initial state, as well as an implementation of updateConflicts(). For SA it needs a createChildren() method which returns an arrayList of states for the given puzzle, a calculateF(State) which calculates the objective function for the given State. For MinConflict it needs to implement findBestNeighbor() which minimizes conflicts as well as the getGoalState() method so that minConflict knows when to terminate the search.
 \section{Third Puzzle}
 Our third puzzle is Sudoku, we have however modified the rules a bit because it makes it easier to implement and we feel that this modification fits the scheme of a scaling constraint satisfaction problem better.\\
 The difference between this and the normal Sudoku is the fact that the normal sudoku is usually a board of 3x3 numbered grids (with numbers ranging from and including 1 to and including 9), and the board is pre-filled with some numbers already, these numbers are not allowed to be changed whatsoever.\\
