--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -75,8 +75,8 @@ We have included a textfile for each problem with some strings of inputs to easi
 \label{diagram}
 \end{figure}
 The figure shows our implementation, the first class CBLocalSearch takes care of the input from the user - number of runs, type of puzzle, type of algorithm and such. It then intiates a
-call to either GeneralSA or GeneralMinConflict which inherits from LocalSearch. Both these classes take in the manager of each puzzle, and the manager takes care of creating the initial states (nodes in SA and finding the next neighbor in min conflict), this is done by calling the createInitState() method in each manager, it also sets the initial state as its currentState.
-The CBLocal search initializes a new search by calling .solve() on either the minConflict or the SA class. From here there's two routes depending on which algorithm we have decided to use, let us take look into the SA algorithm first. The generalSA class calls the createChildren() method in the manager which creates 20 children and returns them, then a call to the manager is invoked with the findBestChild() method, which returns the state with the highest \textbf{F}-value. \\
+call to either GeneralSA or GeneralMinConflict which inherits from LocalSearch. Both these classes take in the manager of each puzzle, and the manager takes care of creating the initial state, this is done by calling the createInitState() method in each manager, it also keeps track of the CurrentState.
+The CBLocal search initializes a new search by calling the constructor of one the subclasses of LocalSearch, either GeneralSA or GeneralMinConflicts, which in turn calls on solve(). From here there's two routes depending on which algorithm we have decided to use, let us take look into the SA algorithm first. The generalSA class calls the createChildren() method in the manager which creates 20 children and returns them, then a call to the manager is invoked with the findBestChild() method, which returns the state with the highest \textbf{F}-value. \\
 The minConflict on the other hand calls on the findBestNeighbor() method which is supposed to find a random location and minimise the conflict given the constraints. It then runs updateConflict() in the findBestNeighbor() method, this updateConflict method updates the number of conflict and the conflict array so the next iteration has a correct indication where it can go to work. It also requires the getGoalState() method to know when to terminate the search.\\
 The code we've written tries to make the implementation as general as possible, the only thing needed to add a new puzzle is to add a manager and a new state type for the puzzle, the new state inherits the \textbf{F}-value and crashes from State, and needs to hold stuff specific to that problem as well as a few fields that might be used for printing out the final goal state (if found). The new manager class is required (by inheriting from StateManager) to have a constructor which calls the createInitState() which creates the initial state, as well as an implementation of updateConflicts(). For SA it needs a createChildren() method which returns an arrayList of states for the given puzzle, a calculateF(State) which calculates the objective function for the given State. For MinConflict it needs to implement findBestNeighbor() which minimizes conflicts as well as the getGoalState() method so that minConflict knows when to terminate the search.
 \section{Third Puzzle}
